fixing background on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -899,6 +899,11 @@ audio::-webkit-media-controls-play-button:hover {
     .banner-image {
         border-radius: 4px;
     }
+
+    body {
+        background-attachment: scroll;
+        background-position: center top;
+    }
     
     .nav {
         flex-direction: column;
